Stretch: Make Navigation Fixed

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,8 @@
 // Home Content
 
 .home {
-
+  padding-top: 100px;
+  
   .intro {
     .intro-img {
       width: 100%;
