--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,12 +1,15 @@
 // Navigation code here
 .main-site-header {
   height: 100px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 
   .header {
     max-width: 100%;
     height: 100%;
     .flexbox(column; center; center);
-    background-color: @nav-bg;
+    background-color: fade(@nav-bg, 92%);
     margin: 0;
 
     .site-logo {
